app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

@layer base {
  :root {
    --background: 214 0 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 268 100% 53%;
    --primary-foreground: 210 40% 98%;

    --secondary: 42 100% 51%;
    --secondary-foreground: 268 100% 53%;

    --muted: 42 100% 51%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 42 100% 51%;
    --accent-foreground: 268 100% 53%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 268 100% 53%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.maplibregl-map {
  -webkit-tap-highlight-color: rgb(0 0 0/0);
  /* font: 12px/20px Helvetica Neue, Arial, Helvetica, sans-serif; */
  overflow: hidden;
  position: relative;
}

.maplibregl-canvas {
  left: 0;
  position: absolute;
  top: 0;
}

.maplibregl-map:fullscreen {
  height: 100%;
  width: 100%;
}

.maplibregl-ctrl-group button.maplibregl-ctrl-compass {
  touch-action: none;
}

.maplibregl-canvas-container.maplibregl-interactive,
.maplibregl-ctrl-group button.maplibregl-ctrl-compass {
  cursor: grab;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.maplibregl-canvas-container.maplibregl-interactive.maplibregl-track-pointer {
  cursor: pointer;
}

.maplibregl-ctrl-bottom-right > .maplibregl-ctrl.maplibregl-ctrl-group {
  height: 64px;
  width: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.maplibregl-ctrl-bottom-right .maplibregl-ctrl-icon {
  scale: 2;
}

.maplibregl-canvas-container.maplibregl-interactive:active,
.maplibregl-ctrl-group button.maplibregl-ctrl-compass:active {
  cursor: grabbing;
}

.maplibregl-canvas-container.maplibregl-touch-zoom-rotate,
.maplibregl-canvas-container.maplibregl-touch-zoom-rotate .maplibregl-canvas {
  touch-action: pan-x pan-y;
}

.maplibregl-canvas-container.maplibregl-touch-drag-pan,
.maplibregl-canvas-container.maplibregl-touch-drag-pan .maplibregl-canvas {
  touch-action: pinch-zoom;
}

.maplibregl-canvas-container.maplibregl-touch-zoom-rotate.maplibregl-touch-drag-pan,
.maplibregl-canvas-container.maplibregl-touch-zoom-rotate.maplibregl-touch-drag-pan
  .maplibregl-canvas {
  touch-action: none;
}

.maplibregl-canvas-container.maplibregl-touch-drag-pan.maplibregl-cooperative-gestures,
.maplibregl-canvas-container.maplibregl-touch-drag-pan.maplibregl-cooperative-gestures
  .maplibregl-canvas {
  touch-action: pan-x pan-y;
}

.maplibregl-ctrl-bottom-left,
.maplibregl-ctrl-bottom-right,
.maplibregl-ctrl-top-left,
.maplibregl-ctrl-top-right {
  pointer-events: none;
  position: absolute;
  z-index: 50;
}

.maplibregl-ctrl-top-left {
  left: 0;
  top: 0;
}

.maplibregl-ctrl-top-right {
  right: 0;
  top: 120px;
}

.maplibregl-ctrl-bottom-left {
  bottom: 0;
  left: 0;
}

.maplibregl-ctrl-bottom-right {
  bottom: 0;
  right: 0;
}

.maplibregl-ctrl {
  clear: both;
  pointer-events: auto;
  transform: translate(0);
}

.maplibregl-ctrl-top-left .maplibregl-ctrl {
  float: left;
  margin: 10px 0 0 10px;
}

.maplibregl-ctrl-top-right .maplibregl-ctrl {
  float: right;
  margin: 10px 10px 0 0;
}

.maplibregl-ctrl-bottom-left .maplibregl-ctrl {
  float: left;
  margin: 0 0 10px 10px;
}

.maplibregl-ctrl-bottom-right .maplibregl-ctrl {
  float: right;
  margin: 0 10px 120px 0;
}

.maplibregl-ctrl-group {
  scale: 1;
  background: #fff;
  border-radius: 999px;
}

.maplibregl-ctrl-group:not(:empty) {
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
}

@media (-ms-high-contrast: active) {
  .maplibregl-ctrl-group:not(:empty) {
    box-shadow: 0 0 0 2px ButtonText;
  }
}

.maplibregl-ctrl-group button {
  background-color: transparent;
  border: 0;
  box-sizing: border-box;
  cursor: pointer;
  display: block;
  height: 29px;
  outline: none;
  padding: 0;
  width: 29px;
}

.maplibregl-ctrl-group button + button {
  border-top: 1px solid #ddd;
}

.maplibregl-ctrl button .maplibregl-ctrl-icon {
  background-position: 50%;
  background-repeat: no-repeat;
  display: block;
  height: 100%;
  width: 100%;
}

@media (-ms-high-contrast: active) {
  .maplibregl-ctrl-icon {
    background-color: transparent;
  }

  .maplibregl-ctrl-group button + button {
    border-top: 1px solid ButtonText;
  }
}

.maplibregl-ctrl button::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.maplibregl-ctrl-attrib-button:focus,
.maplibregl-ctrl-group button:focus {
  box-shadow: 0 0 2px 2px #0096ff;
}

.maplibregl-ctrl button:disabled {
  cursor: not-allowed;
}

.maplibregl-ctrl button:disabled .maplibregl-ctrl-icon {
  opacity: 0.25;
}

.maplibregl-ctrl button:not(:disabled):hover {
  background-color: rgb(0 0 0/5%);
}
/* ... */

